Fix alignment issue due to text change

--- a/assets/_less/home.less
+++ b/assets/_less/home.less
@@ -1,4 +1,4 @@
-.intro-wrap {
+  .intro-wrap {
     min-height: 60%;
     min-width: 100%;
     display: table;
@@ -45,7 +45,7 @@
     float: left;
     margin-right: 30px;
     border: solid 7px darken(#0D273A,2%);
-    margin-top: -10px;
+    margin-top: -20px;
 }
 
 .intro {
